--- a/apps/frontend/admin/admin-app/Jenkinsfile
+++ b/apps/frontend/admin/admin-app/Jenkinsfile
@@ -27,13 +27,13 @@ pipeline {
 
         stage('Lint') {
             steps {
-                sh 'pnpm run lint'
+                sh 'cd ${workpath} && pnpm run lint'
             }
         }
 
         stage('Build') {
             steps {
-                sh 'pnpm run build'
+                sh 'cd ${workpath} && pnpm run build'
             }
         }
 
@@ -46,13 +46,13 @@ pipeline {
 
         stage('Docker Build') {
             steps {
-                    sh 'docker build -t ${appName}:latest .'
+                    sh 'cd ${workpath} && docker build -t ${appName}:latest .'
             }
         }
 
         stage('Docker Run') {
             steps {
-                    sh 'docker run --name ${appName} -d -p 8082:3000 ${appName}'
+                    sh 'cd ${workpath} && docker run --name ${appName} -d -p 8082:3000 ${appName}'
             }
         }
 
