--- a/apps/frontend/consumer/restaurant-app/Jenkinsfile
+++ b/apps/frontend/consumer/restaurant-app/Jenkinsfile
@@ -2,12 +2,12 @@ pipeline {
     agent any
 
     environment {
-        appUrl = 'http://46.28.44.125:8001'
+        appUrl = 'http://46.28.44.125:7005'
         httpStatus = ''
         httpResponse = ''
-        workpath = 'apps/backend/admin/admin-service'
+        workpath = 'apps/frontend/consumer/restaurant-app'
         dockerComposePath = 'assets/docker'
-        appName = "admin-service"
+        appName = "restaurant-app"
     }
     stages {
         stage('Clone Repo') {
