--- a/assets/docker/docker-compose.yml
+++ b/assets/docker/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build:
       context: ./../../apps/frontend/admin/admin-app
       dockerfile: Dockerfile
+    image: admin-app:${BUILD_NUMBER}
     ports:
       - "7001:3000"
     environment:
