--- a/apps/frontend/admin/admin-app/Jenkinsfile
+++ b/apps/frontend/admin/admin-app/Jenkinsfile
@@ -36,6 +36,7 @@ pipeline {
 
         stage('docker compose') {
             steps {
+                sh 'docker rmi ${appName}:${BUILD_NUMBER-1}'
                 sh 'cd ${dockerComposePath} && docker compose up ${appName} -d --build --force-recreate'
             }
         }
